k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: priceline-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: priceline-server
  template:
    metadata:
      labels:
        app: priceline-server
    spec:
      containers:
        - name: priceline-server
          image: rutusoft/priceline-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
