k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: energy-tariff-engine-svc
spec:
  type: NodePort
  selector:
    app: energy-tariff-engine
  ports:
    - port: 8001
      targetPort: 8001
      nodePort: 30001
