k8s/kyverno-verify.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-energy-tariff-engine-signature
spec:
  validationFailureAction: Audit
  background: false
  rules:
    - name: verify-energy-tariff-engine
      match:
        any:
          - resources:
              kinds:
                - Deployment
      verifyImages:
        - imageReferences:
            - "energy-tariff-engine:*"
          attestors:
            - entries:
                - keys:
                    publicKeys: |
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEmGzjpvvrhATPKeuTOGmODG2AROuj
[...]
                      -----END PUBLIC KEY-----
